--- a/style.css
+++ b/style.css
@@ -2,15 +2,18 @@
    margin: 0;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Play:wght@700&display=swap');
+
 body {
     background-color: #ed2939;
 }
 h1 {
     color: #FFA500;
     text-align: center;
-    font-size: 50px;
+    font-size: 70px;
     margin: 40px 0px 60px 0px;
-    -webkit-text-stroke: 0.5px rgb(102, 101, 101);   
+    font-family: 'Play', sans-serif;
+    -webkit-text-stroke: 0.5px rgb(141, 139, 139);   
 }
 #grid {
 
