Styled the #grid container and replaced flex with grid. Made it so when a child is added onto the #grid it auto adjusts it's height and width to fit the container. Not only that but also added a border to the gridBox class to visibly seperate the boxes.

--- a/style.css
+++ b/style.css
@@ -17,10 +17,16 @@ h1 {
 }
 #grid {
     margin: auto;
-    display: flex;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     height: 550px;
     width: 550px;
     background-color: white;
     border: 5px solid #FFFF00;
     border-radius: 5px;
+}
+.gridBox {
+    background: white;
+    border: 1px solid black;
 }
