--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: #ed2939;
 }
-h1 {
+#title {
     color: #FFA500;
     text-align: center;
     font-size: 70px;
@@ -15,7 +15,7 @@ h1 {
     font-family: 'Play', sans-serif;
     -webkit-text-stroke: 1px rgb(214, 214, 214);   
 }
-#grid {
+#gridContainer {
     margin: auto;
     display: grid;
     height: 550px;
